(lang dune 3.6)

(name hardcaml_playpen)

(generate_opam_files true)

(source
 (github jatayl/hardcaml_playpen))

(authors "James Taylor")

(maintainers "James Taylor")

(license LICENSE)

(package
 (name hardcaml_playpen)
 (synopsis "running through the hardcaml documentation")
 (depends ocaml dune))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
